--- a/css/style.css
+++ b/css/style.css
@@ -1,58 +1,58 @@
 @font-face {
-    font-family: 'gilroyextrabold';
-    src: url('../fonts/gilroy-extrabold-webfont.woff2') format('woff2'),
-    url('../fonts/gilroy-extrabold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'gilroyextrabold';
+  src: url('../fonts/gilroy-extrabold-webfont.woff2') format('woff2'),
+  url('../fonts/gilroy-extrabold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'gilroylight';
-    src: url('../fonts/gilroy-light-webfont.woff2') format('woff2'),
-    url('..//fonts/gilroy-light-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'gilroylight';
+  src: url('../fonts/gilroy-light-webfont.woff2') format('woff2'),
+  url('..//fonts/gilroy-light-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 
 }
 
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding:  
+      
+  font-family: "Open sans", arial, sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  color: #000000;
 
-    font-family: "Open Sans", Arial, sans-serif;
-    font-size: 14px;
-    line-height: 24px;
-    color: #000000;
-
-    background-color: #fff;
+  background-color: #fff;
 }
 
 .logo {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 48px;
-    line-height: 48px;
-    font-weight: 400;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 48px;
+  line-height: 48px;
+  font-weight: 400;
 }
 
 a {
-    text-decoration: none;
-    color: #000;
+  text-decoration: none;
+  color: #000;
 }
 
 .header-main {
-    background-color: #f7e296;
+  background-color: #f7e296;
 }
 
 .header-menu-small,
 .user-name {
-    font-size: 15px;
-    line-height: 30px;
-    color: #000;
-    font-weight: 300;
-    letter-spacing: 0.15px;
-
-    list-style: none;
+  font-size: 15px;
+  line-height: 30px;
+  color: #000;
+  font-weight: 300;
+  letter-spacing: 0.1
+   
+  list-style: none;
 }
 
 .header-menu-small a,
@@ -60,152 +60,149 @@ a {
 .option-menu a,
 .catalog-item a,
 .about-us-more {
-    color: #000;
+  color: #000;
 }
 
 .search {
-    font-size: 15px;
-    line-height: 30px;
+  font-size: 15px;
+  line-height: 30px;
 }
 
 .header-catalog-menu li {
-    list-style: none;
+  list-style: none;
 }
 
 .header-catalog-menu a {
-    font-size: 18px;
-    font-weight: bold;
-    line-height: 24px;
-    font-weight: 300;
-    letter-spacing: 0.15px;
-    color: #000;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 24px;
+  font-weight: 300;
+  letter-spacing: 0.15px;
+  color: #000;
 }
 
 .option-menu,
 .catalog-link{
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 18px;
-    line-height: 24px;
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 3.6px;
-
-    list-style: none;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 3.6  
+  list-style: none;
 }
 
 .product b {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 47px;
-    line-height: 56px;
-    color: #000;
-    letter-spacing: 0.17px;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 47px;
+  line-height: 56px;
+  color: #000;
+  letter-spacing: 0.17px;
 }
 
 .product p {
-    font-weight: 300;
-    font-size: 15px;
-    line-height: 30px;
-    color: #464646;
-    line-height: 30px;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 30px;
+  color: #464646;
+  line-height: 30px;
 }
 
 .product-more {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 18px;
-    font-weight: bold;
-    line-height: 24px;
-    letter-spacing: 2.15px;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 24px;
+  letter-spacing: 2.15px;
 }
 
 .product-item-description tr:first-child {
-    font-family: "gilroylight", Arial, sans-serif;
-    font-style: light;
-    font-size: 36px;
-    line-height: 48px;
-    letter-spacing: 0.36px;
-
+  font-family: "gilroylight", arial, sans-serif;
+  font-style: light;
+  font-size: 36px;
+  line-height: 48px;
+  letter-spacing: 0.36  
 }
 
 .product-item-description tr:last-child {
-    font-weight: 300;
-    font-size: 13px;
-    line-height: 20px;
-    color: #464646;
-    letter-spacing: 0.13px;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 20px;
+  color: #464646;
+  letter-spacing: 0.13px;
 }
 
 .catalog-item {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 18px;
-    line-height: 24px;
-    letter-spacing: 0.18px;
-
-    list-style: none;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0.18  
+  list-style: none;
 
 }
 
 .catalog-popular:first-child {
-    background-image: url(../img/popular-1.svg);
-    background-repeat: no-repeat;
-    background-color: #f7e296;
+  background-image: url(../img/popular-1.svg);
+  background-repeat: no-repeat;
+  background-color: #f7e296;
 }
 
 .catalog-popular:nth-child(2) {
-    background-image: url(../img/popular-2.svg);
-    background-repeat: no-repeat;
-    background-color: #f7e296;
+  background-image: url(../img/popular-2.svg);
+  background-repeat: no-repeat;
+  background-color: #f7e296;
 }
 
 .catalog-popular:nth-child(3) {
-    background-image: url(../img/popular-3.svg);
-    background-repeat: no-repeat;
-    background-color: #f7e296;
+  background-image: url(../img/popular-3.svg);
+  background-repeat: no-repeat;
+  background-color: #f7e296;
 }
 
 .catalog-popular:nth-child(4) {
-    background-image: url(../img/popular-4.svg);
-    background-repeat: no-repeat;
-    background-color: #f7e296;
+  background-image: url(../img/popular-4.svg);
+  background-repeat: no-repeat;
+  background-color: #f7e296;
 }
 
 .catalog-popular:nth-child(5) {
-    background-image: url(../img/popular-5.svg);
-    background-repeat: no-repeat;
-    background-color: #f7e296;
+  background-image: url(../img/popular-5.svg);
+  background-repeat: no-repeat;
+  background-color: #f7e296;
 }
 
 .catalog-popular:last-child {
-    background-image: url(../img/popular-6.svg);
-    background-repeat: no-repeat;
-    background-color: #f7e296;
+  background-image: url(../img/popular-6.svg);
+  background-repeat: no-repeat;
+  background-color: #f7e296;
 }
 
 .services-about h2 {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 47px;
-    line-height: 48px;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 47px;
+  line-height: 48px;
 }
 
 .services-about p {
-    font-weight: 300;
-    font-size: 15px;
-    line-height: 30px;
-    color: #464646;
-    letter-spacing: 0.21px;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 30px;
+  color: #464646;
+  letter-spacing: 0.21px;
 }
 
 .services  {
-    list-style: none;
+  list-style: none;
 
 }
 
 .service {
-    background-color: #e5e5e5;
+  background-color: #e5e5e5;
 }
 
 .services-about {
-    background-image: url(../img/delivery.svg);
-    background-repeat: no-repeat;
+  background-image: url(../img/delivery.svg);
+  background-repeat: no-repeat;
 }
 
 .services-button,
@@ -214,227 +211,224 @@ a {
 .criteria-button,
 .show-items,
 .page-list {
-    font: inherit;
-    vertical-align: middle;
-    border: none;
-    background-color: transparent;
+  font: inherit;
+  vertical-align: middle;
+  border: none;
+  background-color: transparent;
 }
 
 .services-button {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 18px;
-    line-height: 24px;
-    letter-spacing: 2.15px;
-    color: #000000;
-    text-transform: uppercase;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 2.15px;
+  color: #000000;
+  text-transform: uppercase;
 }
 .partners li {
-    list-style: none;
+  list-style: none;
 }
 
 .about-us h2,
 .contacts h2 {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 47px;
-    line-height: 48px;
-    letter-spacing: 0.21px;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 47px;
+  line-height: 48px;
+  letter-spacing: 0.21px;
 }
 
 .about-us p,
 .contacts p {
-    font-size: 15px;
-    line-height: 30px;
-    font-weight: 300;
-    color: #464646;
+  font-size: 15px;
+  line-height: 30px;
+  font-weight: 300;
+  color: #464646;
 }
 
 .about-us li {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 40px;
-    color: #000000;
-
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 40px;
+  color: #000000;
 }
 
 .about-us-more,
 .write-to-us {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 18px;
-    line-height: 24px;
-    letter-spacing: 2.15px;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 2.15px;
 }
 
 .button {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 .footer-info h2 {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 48px;
-    line-height: 48px;
-    font-weight: 400;
-    color: #ffc600;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 48px;
+  line-height: 48px;
+  font-weight: 400;
+  color: #ffc600;
 }
 
 .footer-main {
-    background-color: #464646;
+  background-color: #464646;
 }
 
 .footer-adress {
-    font-weight: 300;
-    font-size: 15px;
-    line-height: 30px;
-    color: #fff;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 30px;
+  color: #fff;
 }
 
 .footer-menu-small li {
-    list-style: none;
+  list-style: none;
 }
 
 .footer-menu-small a {
-    font-size: 15px;
-    line-height: 30px;
-    color: #ffffff;
-    font-weight: 300;
-    letter-spacing: 0.15px;
-
-    list-style: none;
+  font-size: 15px;
+  line-height: 30px;
+  color: #ffffff;
+  font-weight: 300;
+  letter-spacing: 0.15  
+  list-style: none;
 }
 
 .footer-menu-main li {
-    list-style: none;
+  list-style: none;
 }
 
 .footer-menu-main a {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 18px;
-    line-height: 24px;
-    color: #fff;
-    text-transform: uppercase;
-    letter-spacing: 3.6px;
-    
-    background-color: #464646;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 3.6px;
+  background-color: #464646;
 }
 
 .footer-tel {
-    font-weight: 300;
-    font-size: 15px;
-    line-height: 30px;
-    color: #fff;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 30px;
+  color: #fff;
 }
 
 .footer-social {
-    list-style: none;
+  list-style: none;
 }
 
 .write-us label {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 24px;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
 }
 
 .write-us-send {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 18px;
-    line-height: 24px;
-    letter-spacing: 2.15px;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 2.15px;
 }
 
 #search-field {
-    font-weight: 300;
-    color: #000000;
+  font-weight: 300;
+  color: #000000;
         
 }
 
 .page-title {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 47px;
-    line-height: 48px;
-    letter-spacing: 0.17px;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 47px;
+  line-height: 48px;
+  letter-spacing: 0.17px;
 }
 
 .navigation-page {
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 24px;
-    color:#000000;
-    letter-spacing: 0.14px;
-    
-    opacity: 0.3;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 24px;
+  color:#000000;
+  letter-spacing: 0.14px;
+  
+  opacity: 0.3;
 }
 
 .criteria-filter,
 .criteria-sort {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.91px;
-    text-transform: uppercase;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.91px;
+  text-transform: uppercase;
 }
 
 .criteria-button {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 18px;
-    
-    opacity: 0.3;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  
+  opacity: 0.3;
 }
 
 .settings legend {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 18px;
-    line-height: 24px;
-    letter-spacing: 0.18px;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0.18px;
 }
 
 .color {
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 40px;
-    letter-spacing: 0.14px;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 40px;
+  letter-spacing: 0.14px;
 }
 
 .show-items {
-   font-family: "gilroyextrabold", Arial, sans-serif;
-   font-weight: 400;
-   font-size: 18px;
-   letter-spacing: 2.15px;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  letter-spacing: 2.15px;
 }
 
 .list-item h3 {
-   font-family: "gilroyextrabold", Arial, sans-serif;
-   font-size: 18px;
-   line-height: 24px;
-   letter-spacing: 0.18px;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0.18px;
 }
 
 .list-item b {
-    font-family: "gilroylight", Arial, sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 24px;
-    color: #464646;
-    letter-spacing: 0.16px;
+  font-family: "gilroylight", arial, sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 24px;
+  color: #464646;
+  letter-spacing: 0.16px;
 }
 
 .page-list {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.91px;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.91px;
 }
 
 .pages li {
-    list-style: none;
+  list-style: none;
 }
 
 .list-item-new {
-    font-family: "gilroyextrabold", Arial, sans-serif;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 0.25px;
-    
-    opacity: 0.2;
+  font-family: "gilroyextrabold", arial, sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.25px;
+  
+  opacity: 0.2;
 }
