--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,9 @@
 
 body {
   margin: 0;
-  padding:  
+  padding: 0;
       
-  font-family: "Open sans", arial, sans-serif;
+  font-family: "Open sans", Arial, sans-serif;
   font-size: 14px;
   line-height: 24px;
   color: #000000;
@@ -29,10 +29,9 @@ body {
 }
 
 .logo {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 48px;
   line-height: 48px;
-  font-weight: 400;
 }
 
 a {
@@ -50,7 +49,7 @@ a {
   line-height: 30px;
   color: #000;
   font-weight: 300;
-  letter-spacing: 0.1
+  letter-spacing: 0.1;
    
   list-style: none;
 }
@@ -73,30 +72,28 @@ a {
 }
 
 .header-catalog-menu a {
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 15px;
   line-height: 24px;
   font-weight: 300;
   letter-spacing: 0.15px;
-  color: #000;
 }
 
 .option-menu,
 .catalog-link{
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 18px;
   line-height: 24px;
-  font-weight: bold;
   text-transform: uppercase;
-  letter-spacing: 3.6  
+  letter-spacing: 3.6;  
+    
   list-style: none;
 }
 
 .product b {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 47px;
   line-height: 56px;
-  color: #000;
+    
   letter-spacing: 0.17px;
 }
 
@@ -109,19 +106,17 @@ a {
 }
 
 .product-more {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 18px;
-  font-weight: bold;
   line-height: 24px;
   letter-spacing: 2.15px;
 }
 
 .product-item-description tr:first-child {
-  font-family: "gilroylight", arial, sans-serif;
-  font-style: light;
+  font-family: "gilroylight", Arial, sans-serif;
   font-size: 36px;
   line-height: 48px;
-  letter-spacing: 0.36  
+  letter-spacing: 0.36;  
 }
 
 .product-item-description tr:last-child {
@@ -129,14 +124,15 @@ a {
   font-size: 13px;
   line-height: 20px;
   color: #464646;
+    
   letter-spacing: 0.13px;
 }
 
 .catalog-item {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 18px;
   line-height: 24px;
-  letter-spacing: 0.18  
+  letter-spacing: 0.18;  
   list-style: none;
 
 }
@@ -178,7 +174,7 @@ a {
 }
 
 .services-about h2 {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 47px;
   line-height: 48px;
 }
@@ -188,6 +184,7 @@ a {
   font-size: 15px;
   line-height: 30px;
   color: #464646;
+    
   letter-spacing: 0.21px;
 }
 
@@ -218,7 +215,7 @@ a {
 }
 
 .services-button {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 18px;
   line-height: 24px;
   letter-spacing: 2.15px;
@@ -231,7 +228,7 @@ a {
 
 .about-us h2,
 .contacts h2 {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 47px;
   line-height: 48px;
   letter-spacing: 0.21px;
@@ -246,16 +243,15 @@ a {
 }
 
 .about-us li {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 16px;
-  font-weight: 400;
   line-height: 40px;
   color: #000000;
 }
 
 .about-us-more,
 .write-to-us {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 18px;
   line-height: 24px;
   letter-spacing: 2.15px;
@@ -266,10 +262,9 @@ a {
 }
 
 .footer-info h2 {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 48px;
   line-height: 48px;
-  font-weight: 400;
   color: #ffc600;
 }
 
@@ -302,7 +297,7 @@ a {
 }
 
 .footer-menu-main a {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 18px;
   line-height: 24px;
   color: #fff;
@@ -323,14 +318,13 @@ a {
 }
 
 .write-us label {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 18px;
-  font-weight: 400;
   line-height: 24px;
 }
 
 .write-us-send {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 18px;
   line-height: 24px;
   letter-spacing: 2.15px;
@@ -343,7 +337,7 @@ a {
 }
 
 .page-title {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 47px;
   line-height: 48px;
   letter-spacing: 0.17px;
@@ -361,7 +355,7 @@ a {
 
 .criteria-filter,
 .criteria-sort {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.91px;
@@ -377,7 +371,7 @@ a {
 }
 
 .settings legend {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 18px;
   line-height: 24px;
   letter-spacing: 0.18px;
@@ -391,30 +385,28 @@ a {
 }
 
 .show-items {
-  font-family: "gilroyextrabold", arial, sans-serif;
-  font-weight: 400;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 18px;
   letter-spacing: 2.15px;
 }
 
 .list-item h3 {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 18px;
   line-height: 24px;
   letter-spacing: 0.18px;
 }
 
 .list-item b {
-  font-family: "gilroylight", arial, sans-serif;
+  font-family: "gilroylight", Arial, sans-serif;
   font-size: 16px;
-  font-weight: 300;
   line-height: 24px;
   color: #464646;
   letter-spacing: 0.16px;
 }
 
 .page-list {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.91px;
@@ -425,7 +417,7 @@ a {
 }
 
 .list-item-new {
-  font-family: "gilroyextrabold", arial, sans-serif;
+  font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.25px;
