--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,16 @@
 @font-face {
-  font-family: 'gilroyextrabold';
-  src: url('../fonts/gilroy-extrabold-webfont.woff2') format('woff2'),
-  url('../fonts/gilroy-extrabold-webfont.woff') format('woff');
+  font-family: "gilroyextrabold";
+  src: url("../fonts/gilroy-extrabold-webfont.woff2") format("woff2"),
+  url("../fonts/gilroy-extrabold-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 
 }
 
 @font-face {
-  font-family: 'gilroylight';
-  src: url('../fonts/gilroy-light-webfont.woff2') format('woff2'),
-  url('..//fonts/gilroy-light-webfont.woff') format('woff');
+  font-family: "gilroylight";
+  src: url("../fonts/gilroy-light-webfont.woff2") format("woff2"),
+  url("..//fonts/gilroy-light-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 
