--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@ body {
   color: #000000;
 
   background-color: #fff;
+  background-image: url("../img/device-index.jpg");
+    background-repeat: no-repeat;
+    background-size: 1440px 2795px;
+    background-position: top center;
 }
 
 .logo {
@@ -40,7 +44,7 @@ a {
 }
 
 .header-main {
-  background-color: #f7e296;
+  /* background-color: #f7e296;*/
 }
 
 .header-menu-small,
@@ -71,21 +75,27 @@ a {
   list-style: none;
 }
 
-.header-catalog-menu a {
+.header-catalog-menu a,
+.menu-sign-in a {
   font-size: 15px;
   line-height: 24px;
   font-weight: 300;
   letter-spacing: 0.15px;
 }
 
-.option-menu,
-.catalog-link{
+
+.catalog-link a,
+.option-menu a {
   font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 18px;
   line-height: 24px;
   text-transform: uppercase;
-  letter-spacing: 3.6;  
-    
+  letter-spacing: 3.6px;    
+}
+
+.option-menu,
+.catalog-link,
+.menu-sign-in {
   list-style: none;
 }
 
@@ -137,40 +147,38 @@ a {
 
 }
 
+.catalog-popular {
+    width: 160px;
+    height: 245px;
+}
 .catalog-popular:first-child {
   background-image: url(../img/popular-1.svg);
   background-repeat: no-repeat;
-  background-color: #f7e296;
 }
 
 .catalog-popular:nth-child(2) {
   background-image: url(../img/popular-2.svg);
   background-repeat: no-repeat;
-  background-color: #f7e296;
 }
 
 .catalog-popular:nth-child(3) {
   background-image: url(../img/popular-3.svg);
   background-repeat: no-repeat;
-  background-color: #f7e296;
 }
 
 .catalog-popular:nth-child(4) {
   background-image: url(../img/popular-4.svg);
   background-repeat: no-repeat;
-  background-color: #f7e296;
 }
 
 .catalog-popular:nth-child(5) {
   background-image: url(../img/popular-5.svg);
   background-repeat: no-repeat;
-  background-color: #f7e296;
 }
 
 .catalog-popular:last-child {
   background-image: url(../img/popular-6.svg);
   background-repeat: no-repeat;
-  background-color: #f7e296;
 }
 
 .services-about h2 {
@@ -193,8 +201,10 @@ a {
 
 }
 
-.service {
-  background-color: #e5e5e5;
+.service  {
+ /* background-color: #e5e5e5;*/
+    margin: 0;
+    padding: 0;
 }
 
 .services-about {
@@ -424,3 +434,145 @@ a {
   
   opacity: 0.2;
 }
+
+/* для сетки */
+
+.main-navigation {
+  min-height: 299px;
+  outline: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.catalog-link,
+.option-menu,
+.header-menu-small,
+.menu-sign-in {
+    margin: 0;
+    padding: 0;
+}
+
+.logo {
+  margin: 0;
+  padding: 0;
+}
+
+.search input {
+    margin: 0;
+    padding: 0;
+    width: 240px;
+}
+
+.menu-sign-in {
+  margin-left: 325px;
+  width: 80px;
+}
+
+.header-menu-small {
+   margin-left: 210px;
+  width: 220px;
+}
+
+.option-menu {
+}
+
+.main-navigation-wrapper {
+    width: 1160px;
+    min-height: 299px;
+    outline: 3px solid green;
+    margin: 0 auto;
+    padding: 0;
+    margin-top: 40px;
+}
+
+.container {
+  width: 1040px;
+  margin: 0 auto;
+  padding: 0;
+  outline: 3px solid red;
+  padding-top: 50px;
+}
+
+.main-navigation-wrapper .container {
+  display: flex;
+}
+
+.header-catalog-menu-wrapper .container {
+    padding-top: 5px;
+    
+    display: flex;
+}
+
+.catalog-link a {
+  width: 220px;
+}
+
+.option-menu {
+    margin-left: 320px;
+    width: 500px;
+}
+
+.wrapper {
+    width: 1160px;
+    min-height: 299px;
+    outline: 3px solid green;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.product-wrapper {
+    display: flex; 
+    flex-direction: row;
+    padding: 0 60px;
+    justify-content: space-between;
+    margin-bottom: 110px;
+}
+
+.product-item {
+    width: 384px;
+    height: 486px;
+    padding: 0;
+    margin: 0;
+}
+
+.product-image {
+    margin-top: -85px;
+    width: 440px;
+    margin-left:30px;
+}
+.product-info {
+    width: 500px;
+}
+
+.catalog {
+    padding: 0;
+    margin: 0;
+    
+    
+}
+.catalog-item {
+    display: flex;
+    min-height: 160px;
+    justify-content: space-between;
+    
+    padding: 0;
+    margin: 0;
+}
+
+.product {
+    margin-top: -30px;
+ 
+}
+
+.catalog{
+       outline: 3px solid blue;
+    min-height: 245px;
+    margin-bottom: 175px;
+}
+
+.service .wrapper{
+    display: flex;
+    justify-content: flex-start;
+}
+
