изменили с наставником хєдєр

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+
+
+
 @font-face {
   font-family: "gilroyextrabold";
   src: url("../fonts/gilroy-extrabold-webfont.woff2") format("woff2"),
@@ -16,6 +24,10 @@
 
 }
 
+html {
+  box-sizing: border-box;
+} 
+
 body {
   margin: 0;
   padding: 0;
@@ -31,6 +43,7 @@ body {
     background-size: 1440px 2795px;
     background-position: top center;*/
 }
+
 
 .logo {
   font-family: "gilroyextrabold", Arial, sans-serif;
@@ -440,9 +453,6 @@ a {
 .main-navigation {
   min-height: 299px;
   outline: 1px solid black;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
 }
 
 .catalog-link,
@@ -470,7 +480,6 @@ a {
 }
 
 .header-menu-small {
-   margin-left: 210px;
   width: 220px;
 }
 
@@ -487,7 +496,7 @@ a {
 }
 
 .container {
-  width: 1040px;
+  width: 1160px;
   margin: 0 auto;
   padding: 0;
   outline: 3px solid red;
@@ -509,7 +518,6 @@ a {
 }
 
 .option-menu {
-    margin-left: 320px;
     width: 500px;
 }
 
@@ -545,12 +553,6 @@ a {
     width: 500px;
 }
 
-.catalog {
-    padding: 0;
-    margin: 0;
-    
-    
-}
 .catalog-item {
     display: flex;
     min-height: 160px;
@@ -576,3 +578,42 @@ a {
     justify-content: flex-start;
 }
 
+.header-catalog-menu {
+    display: none;
+}
+
+.header-main {
+    padding: 0 60px;
+    box-sizing: border-box;
+}
+
+.header-container {
+    width: 500px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.services {
+    margin: 0;
+    padding: 0;
+}
+
+.upper-menu {
+display: flex;
+justify-content: space-between;
+}
+
+.header-menu-small {
+    display: flex;
+    justify-content: space-between;
+    width: 220px;
+    
+}
+
+.option-menu-contacts {
+    margin-left: 50px;
+}
+
+.catalog-popular  {
+    padding-top: 60px;
+}
