сделала сетку на  index

--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,8 @@ body {
   line-height: 24px;
   color: #000000;
 
-  background-color: #fff;
-  /*background-image: url("../img/device-index.jpg");
+ /*background-color: #fff;
+ background-image: url("../img/device-index.jpg");
     background-repeat: no-repeat;
     background-size: 1440px 2795px;
     background-position: top center;*/
@@ -49,6 +49,8 @@ body {
   font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 48px;
   line-height: 48px;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -97,7 +99,7 @@ a {
 }
 
 
-.catalog-link a,
+.catalog-link ,
 .option-menu a {
   font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 18px;
@@ -211,6 +213,7 @@ a {
 
 .services  {
   list-style: none;
+  width: 300px;
 
 }
 
@@ -218,11 +221,13 @@ a {
  /* background-color: #e5e5e5;*/
     margin: 0;
     padding: 0;
+    margin-bottom: 50px;
 }
 
 .services-about {
   background-image: url(../img/delivery.svg);
   background-repeat: no-repeat;
+  width: 760px;
 }
 
 .services-button,
@@ -284,7 +289,7 @@ a {
   text-transform: uppercase;
 }
 
-.footer-info h2 {
+.footer-up h2 {
   font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 48px;
   line-height: 48px;
@@ -336,9 +341,6 @@ a {
   color: #fff;
 }
 
-.footer-social {
-  list-style: none;
-}
 
 .write-us label {
   font-family: "gilroyextrabold", Arial, sans-serif;
@@ -451,7 +453,6 @@ a {
 /* для сетки */
 
 .main-navigation {
-  min-height: 299px;
   outline: 1px solid black;
 }
 
@@ -461,11 +462,6 @@ a {
 .menu-sign-in {
     margin: 0;
     padding: 0;
-}
-
-.logo {
-  margin: 0;
-  padding: 0;
 }
 
 .search input {
@@ -483,8 +479,7 @@ a {
   width: 220px;
 }
 
-.option-menu {
-}
+
 
 .main-navigation-wrapper {
     width: 1160px;
@@ -500,7 +495,6 @@ a {
   margin: 0 auto;
   padding: 0;
   outline: 3px solid red;
-  padding-top: 50px;
 }
 
 .main-navigation-wrapper .container {
@@ -529,28 +523,23 @@ a {
     padding: 0;
 }
 
-.product-wrapper {
-    display: flex; 
-    flex-direction: row;
-    padding: 0 60px;
-    justify-content: space-between;
-    margin-bottom: 110px;
-}
 
 .product-item {
     width: 384px;
     height: 486px;
     padding: 0;
     margin: 0;
+    
 }
 
 .product-image {
-    margin-top: -85px;
     width: 440px;
     margin-left:30px;
+    top: -110px;
 }
 .product-info {
     width: 500px;
+    top: -30px;
 }
 
 .catalog-item {
@@ -562,20 +551,16 @@ a {
     margin: 0;
 }
 
-.product {
-    margin-top: -30px;
- 
+.service .container {
+    display: flex;
+    justify-content: space-between;
 }
+
 
 .catalog{
        outline: 3px solid blue;
     min-height: 245px;
-    margin-bottom: 175px;
-}
-
-.service .wrapper{
-    display: flex;
-    justify-content: flex-start;
+    margin-bottom: 180px;
 }
 
 .header-catalog-menu {
@@ -584,7 +569,9 @@ a {
 
 .header-main {
     padding: 0 60px;
-    box-sizing: border-box;
+    min-height: 300px;
+    margin-top: 40px;
+    /*background-color: #f7e296;*/
 }
 
 .header-container {
@@ -598,7 +585,7 @@ a {
     padding: 0;
 }
 
-.upper-menu {
+.wrapp-menu {
 display: flex;
 justify-content: space-between;
 }
@@ -609,11 +596,114 @@ justify-content: space-between;
     width: 220px;
     
 }
-
+.visually-hidden {
+    display: none;
+}
+.main-logo {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    top: -23px;
+}
 .option-menu-contacts {
-    margin-left: 50px;
+    margin-left: 70px;
 }
 
-.catalog-popular  {
+
+
+.main-navigation {
+    margin-top: 35px;
+}
+
+.product {
+    display: flex; 
+    padding: 0 60px;
+    justify-content: space-between;
+    margin-bottom: 110px;
+    height: 375px;
+}
+
+.move-up {
+    position: relative;
+}
+
+.category {
+    width: 160px;
+    height: 160px;
+    background-color: #f7e296;
+}
+
+.catalog-popular a {
+    position: relative;
+    padding: 0;
+    margin: 0;
+    top: 195px;
+}
+
+.partners {
+    display: flex;
+    margin-bottom: 50px;
+}
+
+.about-us {
+    width: 500px;
+}
+
+.contacts {
+    width: 560px;
+}
+
+.info {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-up {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-menu-small {
+    display: flex;
+    justify-content: space-between;
+    width: 380px;
+}
+
+.footer-up h2 {
+    padding: 0;
+    margin: 0;
+}
+
+.footer-main {
     padding-top: 60px;
+    padding-bottom: 65px;
+}
+
+.footer-middle {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-menu-main {
+    display: flex;
+    justify-content: space-between;
+    
+    width: 440px;
+}
+.footer-bottom {
+    display: flex;
+    justify-content: flex-end;
+}
+.footer-social {
+    display: flex;
+    justify-content: space-between;
+    
+    width: 240px;
+    
+    list-style: none;
+}
+
+.footer-html {
+    width: 60px;
+    margin-left: 400px;
 }
