--- a/css/style.css
+++ b/css/style.css
@@ -328,6 +328,7 @@ a {
   padding: 0;
   margin-top: 36px;
   margin-left: 36px;
+  margin-bottom: 63px;
 }
 .about-us li {
   font-family: "gilroyextrabold", Arial, sans-serif;
@@ -342,6 +343,8 @@ a {
   font-size: 18px;
   line-height: 24px;
   letter-spacing: 2.15px;
+  display: block;
+  padding-left: 25px;
 }
 
 .button {
@@ -364,6 +367,7 @@ a {
   font-size: 15px;
   line-height: 30px;
   color: #fff;
+  position: relative;
 }
 
 .footer-menu-small li {
@@ -757,6 +761,7 @@ a {
   display: flex;
   justify-content: space-between;
   margin-bottom: 52px;
+  align-items: flex-end;
 }
 
 .footer-menu-main {
@@ -776,6 +781,8 @@ a {
 .footer-social {
   display: flex;
   justify-content: space-between;
+  margin: 0;
+  padding: 0;
   
   width: 240px;
   
@@ -1018,7 +1025,7 @@ a {
   position: absolute;
   
   top: 10px;
-  left: 24px;
+  left: 33px;
   width: 27px;
   height: 35px;
   background-image: url("../img/logo-html.svg");
@@ -1096,3 +1103,103 @@ a {
   line-height: 30px;
   font-weight: 300;
 }
+
+iframe {
+  margin-bottom: 71px;
+}
+
+.contacts p {
+  padding-bottom: 38px;
+}
+
+.write-to-us {
+  padding-left: 41px;
+}
+
+.footer-adress::after {
+  content: "";
+  position: absolute;
+  top: 107px;
+  right: 122px;
+  
+  width: 80px;
+  height: 7px;
+  background-image: url("../img/orange%20807.jpg");
+  background-repeat: no-repeat;
+  background-position: 0 0;       
+}
+
+.warranty,
+.credit {
+  padding-left: 4px;
+}
+
+.write-us {
+  width: 960px;
+  min-height: 553px;
+  position: absolute;
+  background-color: white;
+  top: 200px;
+  left: 50%;
+  margin-left: -480px;
+  padding-top: 90px;
+}
+
+.form-container {
+  width: 760px;
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.form-info {
+  width: 360px;
+  min-height: 85px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+}
+
+.form-info label {
+  width: 360px;
+  height: 0;
+}
+
+.form-info input {
+  width: 360px;
+  background-color: #f2f2f2;
+  border: none;
+}
+
+.form-text {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.write-us-text,
+.form-text textarea {
+  width: 760px;
+}
+
+.modal-close {
+  content: "";
+
+  position: absolute;
+  top: 10px;
+  left: 2px;
+
+  width: 19px;
+  height: 3px;
+
+  background-color: #d0d0d0;
+}
+
+.form-text textarea {
+  margin-bottom: 50px;
+}
+
+
+
